--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ header p {
 .jumbotron {
   display: flex;
   align-items: center;
-  background-image: url('/images/background.png');
+  background-image: url('https://s3-us-west-2.amazonaws.com/lauramanorwebsite/background.png');
   background-size: cover;
   color: #ffffff;
   height: 100%;
@@ -74,4 +74,7 @@ footer .col{
 
 .fa {
   color: navy;
+  padding-right: .5em;
+    padding-left: .5em;
+    padding-bottom: .5em;
 }
