--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ header p {
 .jumbotron {
   display: flex;
   align-items: center;
-  background-image: url('https://s3-us-west-2.amazonaws.com/lauramanorwebsite/background.png');
+  background-image: url('images/background.png');
   background-size: cover;
   color: #ffffff;
   height: 100%;
@@ -77,4 +77,9 @@ footer .col{
   padding-right: .5em;
     padding-left: .5em;
     padding-bottom: .5em;
+}
+
+img {
+  width: 10%;
+  height: auto;
 }
